--- a/slidingmenu/build.gradle
+++ b/slidingmenu/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
+        applicationId "lin.slidingmenu"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -22,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.nineoldandroids:library:2.4.0'
 }
